# SRA-Ray_Tracer_from_Scratch

./: Makefile  Open G.L. Notes🖥️.md  README.md  README_main.md  application  application.cpp  concat_shaders.py  finalGUI  gui.cpp  main.cpp  pyramid.cpp  pyramid1.cpp  shaders.cpp  sphere.cpp
GL_Tracer_API/: ekApplication.hpp  ekGLUtils.hpp  ekShaderUtils.hpp
GUI_examples/: cylinder.cpp
Images/: Cylinder_GUI.webm  Cylinder_OpenGL.webm
Notes/: Open G.L. Notes🖥️.md
RT-API/: API.md  Makefile  a.out  image.ppm  imagegen.sh  main.cpp  op
Shaders/: combined.glsl  compute.glsl  fragment.glsl  vertex.glsl
The Cherno's Tutorials/: IndexBuffer.cpp  IndexBuffer.hpp  Makefile  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  abstraction.cpp  application  application.cpp  video10.cpp  video11  video11.cpp  video2.cpp  video4.cpp  video8.cpp  video9.cpp
cube/: Makefile  concat.py  new.cpp
my_glfw_project/: Makefile  errors.cpp  main.cpp  openGLProject  pyramid.cpp  pyramid_new.cpp  rectangle.cpp  txtbk.cpp  (+1 more)
project/final_cube/: CMakeLists.txt  combined.glsl  combined_compute.glsl  compute.glsl  fragment.glsl
project/final_cube/Fragment/: cube.glsl  interval.glsl  scatter.glsl
ray_tracing_book/: 10.5.cpp  11.2.cpp  11.5.cpp  12.1.cpp  12.2.cpp  12.3.cpp  13.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  camera.h  color.h  cube.cpp  cube.h  hittable.h  image11.2.ppm  image11.3.ppm  material.h  rtweekend.h  sphere.h  vec3.h
(+78 files in other folders)
