cmake_minimum_required(VERSION 3.10)
project(PPMProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(image1 1.cpp)
add_executable(image3 3.cpp)
add_executable(image4 4.cpp)
add_executable(image5 5.cpp)
add_executable(image6 6.cpp)
add_executable(image6_7 6.7.cpp)
add_executable(image7 7.cpp)
add_executable(image8 8.cpp)
add_executable(image9 9.cpp)
add_executable(image10_5 10.5.cpp)
add_executable(image10_6 10.6.cpp)
add_executable(image11_2 11.2.cpp)
add_executable(image11_3 11.3.cpp)
add_executable(image11_5 11.5.cpp)
add_executable(image12_1 12.1.cpp)
add_executable(image12_2 12.2.cpp)
add_executable(image12_3 12.3.cpp)
add_executable(image13 13.cpp)
add_executable(image14 14.cpp)
add_executable(cube cube.cpp)
